# django_skeleton

./: .gitignore  CHANGELOG.md  Makefile  README.md  cookiecutter.json  example.env  task.sh
skeleton/: manage.py
skeleton/core/: context_processors.py  forms.py  urls.py  views.py
skeleton/core/static/core/css/: style.css
skeleton/core/templates/core/: base.html  form_calc.html  help.html  index.html
skeleton/core/tests/: test_forms.py  test_models.py  test_views.py
skeleton/skeleton/: asgi.py  settings.py  urls.py  wsgi.py
{{ cookiecutter.project_slug }}/: .gitignore  CHANGELOG.md  Dockerfile  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  dockerignore  example.env  pyproject.toml
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/core/: urls.py  views.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/core/static/core/css/: style.css  water.css
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/core/templates/core/: base.html  index.html
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/core/templates/core/error/: 400.html  403.html  404.html  500.html
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/core/tests/: test_pages.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: settings.py  urls.py  views.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/tests/: test_site.py
