[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = ""
license = "Apache-2.0, MIT"
authors = ["{{ cookiecutter.author }}"]

[tool.poetry.dependencies]
dj-database-url = "^0.5.0"
Django = "^4.0.4"
gunicorn = "^20.1.0"
python = "^3.10"
whitenoise = "^6.2.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1"
pytest-django = "^4.5.2"

[tool.pytest.ini_options]
pythonpath = [
  "{{ cookiecutter.project_slug }}"
]
DJANGO_SETTINGS_MODULE = "{{ cookiecutter.project_slug }}.settings"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
